# Scrub

./: CMakeLists.txt
Scrub/: Shrub.cpp  Shrub.hpp
Scrub/JSON/: JSONSerializer.cpp  JSONSerializer.hpp
Scrub/XML/: XMLSerializer.cpp  XMLSerializer.hpp  pugiconfig.hpp
Tests/: CMakeLists.txt  ScrubTests.cpp
